2/15/24: Added cox-logo-newblue-withEnterprises.svg to images folder and updated link to CEI logo in index.html to point to it rather than internet source.